singlefile_webapp.html

--- a/singlefile_webapp.html
+++ b/singlefile_webapp.html
@@ -3,7 +3,7 @@
 <head>
   <script>
 if (!localStorage.getItem('loginOK')) {
-  window.location.href = 'login.html';
+  window.location.href = 'LOGIN.html';
 }
 </script>
 
@@ -1061,3 +1061,4 @@ document.getElementById('filter-summary').innerHTML = `
 
 </body>
 </html>
+
