--- a/LOGIN.html
+++ b/LOGIN.html
@@ -3,21 +3,97 @@
 <head>
   <meta charset="UTF-8">
   <title>Login Operator Genset</title>
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      height: 100vh;
+      margin: 0;
+      background: url('bg.jpg') no-repeat center/cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .login-card {
+      width: 380px;
+      padding: 30px;
+      border-radius: 15px;
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(8px);
+      box-shadow: 0 15px 40px rgba(0,0,0,0.5);
+      color: white;
+    }
+
+    .login-card h4 {
+      text-align: center;
+      margin-bottom: 25px;
+      font-weight: 600;
+      letter-spacing: 1px;
+    }
+
+    .form-control {
+      background: rgba(255,255,255,0.1);
+      border: none;
+      color: white;
+      border-radius: 10px;
+    }
+
+    .form-control::placeholder {
+      color: #ccc;
+    }
+
+    .form-control:focus {
+      background: rgba(255,255,255,0.15);
+      color: white;
+      box-shadow: 0 0 0 2px #7b4bff;
+    }
+
+    .btn-login {
+      background: linear-gradient(135deg, #f5e50e, #f2f21d);
+      border: none;
+      border-radius: 10px;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    .btn-login:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 20px rgba(123,75,255,0.5);
+    }
+
+    .login-footer {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 13px;
+      color: #ccc;
+    }
+  </style>
 </head>
-<body class="bg-light">
 
-<div class="container mt-5" style="max-width:400px">
-  <h4 class="text-center mb-3">🔐 Login Operator</h4>
+<body>
 
-  <div class="card p-3 shadow">
-    <input id="login-user" class="form-control mb-2" placeholder="Username">
-    <input id="login-pass" type="password" class="form-control mb-3" placeholder="Password">
-    <button class="btn btn-primary w-100" onclick="login()">Login</button>
-    <div id="login-error" class="text-danger mt-2"></div>
+  <div class="login-card">
+    <h4>🔐 LOGIN OPERATOR</h4>
+
+    <input id="login-user" class="form-control mb-3" placeholder="Username">
+    <input id="login-pass" type="password" class="form-control mb-4" placeholder="Password">
+
+    <button class="btn btn-login w-100 py-2" onclick="login()">Login</button>
+
+    <div id="login-error" class="text-danger text-center mt-2"></div>
+
+    <div class="login-footer">
+      Genset Operation Monitoring System
+    </div>
   </div>
-</div>
 
-<script src="LOGIN.js"></script>
+  <script src="LOGIN.js"></script>
 </body>
 </html>
