--- a/LOGIN.html
+++ b/LOGIN.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login Operator Genset</title>
+<link rel="icon" type="image/png" href="img/logoesdm.png">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -97,3 +98,4 @@
   <script src="LOGIN.js"></script>
 </body>
 </html>
+
